feat: added wake server request example usage to docs
